--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -308,7 +308,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">What is Mobile App Development</h2>
+                                <h2 class="heading">What is Web Development</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
@@ -494,38 +494,38 @@
                                 <div class="sidebar__tag">
                                     <ul>
                                         <li>
-                                            <a class="common__gradient__bg active" href="javascript:void(0);">
+                                            <a class="common__gradient__bg active" href="mobile-app-development-services">
                                                 <span>App Development</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="javascript:void(0);">
+                                            <a class="common__gradient__bg " href="ui-ux-design">
                                                 <span>UI/UX Design</span>
                                             </a>
                                         </li>
 
 
                                         <li>
-                                            <a class="common__gradient__bg " href="javascript:void(0);">
+                                            <a class="common__gradient__bg " href="web-development-services">
                                                 <span>Web Development</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="javascript:void(0);">
+                                            <a class="common__gradient__bg " href="wordpress-development-services">
                                                 <span>WordPress Development</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="javascript:void(0);">
+                                            <a class="common__gradient__bg " href="seo-services">
                                                 <span>SEO</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="javascript:void(0);">
+                                            <a class="common__gradient__bg " href="network-services">
                                                 <span>Networking Solution</span>
                                             </a>
                                         </li>
@@ -543,7 +543,7 @@
 
                             <div class="blog__details__img__wrapper" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="blog__details__img">
-                                    <img src="assets/img/blog/blog__details.png" alt="">
+                                    <img src="assets/img/blog/Web-blog.png" alt="img">
                                 </div>
                                 <div class="blog__details__small__button">
                                     <span>08 May, 2024</span>
