--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                             data-aos-duration="1500">
                             <div class="project__single single__transform">
                                 <div class="project__img">
-                                    <img src="assets/img/project/project__2.webp" alt="">
+                                    <img src="assets/img/project/project__2.webp" alt="img">
                                 </div>
 
                             </div>
@@ -1111,24 +1111,6 @@
                                             of completed consulting projects, delivering tailored, innovative, and
                                             impactful solutions that drive growth, efficiency, and success for
                                             businesses across diverse industries worldwide</p>
-                                    </div>
-                                    <div class="common-icon">
-                                        <div class="project__heading">
-                                            <h3><a href="javascript:void(0);">Risk Assessment and Management</a></h3>
-                                        </div>
-                                        <div class="project__icon">
-                                            <a class="direction__btn" href="javascript:void(0);"><svg width="34"
-                                                    height="34" viewBox="0 0 34 34" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
-                                                        stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
-                                                        stroke-linecap="round" stroke-linejoin="round" />
-                                                    <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
-                                                        stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
-                                                        stroke-linejoin="round" />
-                                                </svg>
-                                            </a>
-                                        </div>
                                     </div>
                                     <div class="project__bottom aos-init aos-animate w-100" style="padding: 20px 0px;"
                                         data-aos="fade-up" data-aos-duration="1500">
