all page update

--- a/blog.html
+++ b/blog.html
@@ -493,38 +493,38 @@
                                     <ul>
                                         <li>
                                             <a class="common__gradient__bg active" href="blog-details">
-                                                <span>Management</span>
+                                                <span>Web Development</span>
                                             </a>
                                         </li>
 
                                         <li>
                                             <a class="common__gradient__bg " href="blog-details">
-                                                <span>Consulting</span>
+                                                <span>Mobile App Development</span>
                                             </a>
                                         </li>
 
 
                                         <li>
                                             <a class="common__gradient__bg " href="blog-details">
-                                                <span>Start-up</span>
+                                                <span>Software Development</span>
                                             </a>
                                         </li>
 
                                         <li>
                                             <a class="common__gradient__bg " href="blog-details">
-                                                <span>Marketing</span>
+                                                <span>Digital Marketing</span>
                                             </a>
                                         </li>
 
                                         <li>
                                             <a class="common__gradient__bg " href="blog-details">
-                                                <span>Operation</span>
+                                                <span>network Solution</span>
                                             </a>
                                         </li>
 
                                         <li>
                                             <a class="common__gradient__bg " href="blog-details">
-                                                <span>HR Management</span>
+                                                <span>SEO Expert</span>
                                             </a>
                                         </li>
                                     </ul>
