--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FAQ | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>FAQ | Software Company | Digital Minds On</title>
+    <meta name="description"
+        content="We offer custom software, web, and mobile app development, UI/UX design, and consulting services tailored to meet your business needs.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
