--- a/request-quote.html
+++ b/request-quote.html
@@ -5,7 +5,7 @@
     <meta name="description"
         content="Find details & contact us at our headquarters or any of our regional offices situated across the globe.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resquest | Get In Touch Today | Digital Minds On</title>
+    <title>Resquest Quote | Get In Touch Today | Digital Minds On</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
