--- a/seo-services.html
+++ b/seo-services.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Affordable Search Engine Optimization Services | Digital Minds On</title>
-    <meta name="description" content="">
+    <meta name="description"
+        content="Our Search Engine Optimization (SEO) Services enhance your website's visibility, drive organic traffic, and improve search engine rankings for business growth.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -239,7 +240,7 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-                  
+
 
 
 
@@ -384,31 +385,36 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="web-development-services">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software-development-services">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -419,7 +425,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="game-development-services">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
