--- a/project.html
+++ b/project.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Project | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>All Project | Multiple Themes Build | Digital Minds On</title>
+    <meta name="description" content="All Projects & Built with Multiple Themes for versatile, customized solutions to meet diverse business needs and goals.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
