blogo url update

--- a/blog.html
+++ b/blog.html
@@ -492,38 +492,38 @@
                                 <div class="sidebar__tag">
                                     <ul>
                                         <li>
-                                            <a class="common__gradient__bg active" href="blog-details">
+                                            <a class="common__gradient__bg active" href="web-development-services">
                                                 <span>Web Development</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="blog-details">
+                                            <a class="common__gradient__bg " href="mobile-app-development-services">
                                                 <span>Mobile App Development</span>
                                             </a>
                                         </li>
 
 
                                         <li>
-                                            <a class="common__gradient__bg " href="blog-details">
+                                            <a class="common__gradient__bg " href="software-development-services">
                                                 <span>Software Development</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="blog-details">
+                                            <a class="common__gradient__bg" href="digital-marketing-services">
                                                 <span>Digital Marketing</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="blog-details">
+                                            <a class="common__gradient__bg " href="network-services">
                                                 <span>network Solution</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="blog-details">
+                                            <a class="common__gradient__bg " href="seo-services">
                                                 <span>SEO Expert</span>
                                             </a>
                                         </li>
