--- a/team.html
+++ b/team.html
@@ -551,11 +551,11 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/awaisraza.jpg" alt="">
+                                    <img src="assets/img/team/tayyab.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
-                                    <p>Search Engine Optimization</p>
+                                    <h6><a href="javascript:void(0)">Mr. Tayyab Karamat</a></h6>
+                                    <p>Software Assurance Quality</p>
                                 </div>
                                 <div class="team__member__icon">
                                     <ul>
