--- a/software-development-services.html
+++ b/software-development-services.html
@@ -24,7 +24,7 @@
     <!-- title scrollbar -->
     <script>
         // Text for the title
-        let titleText = "Custom Software Development Services | Digital MInds On";
+        let titleText = "Custom Software Development Services | Digital Minds On ";
         let index = 0;
         function scrollTitle() {
             document.title = titleText.slice(index) + titleText.slice(0, index);
