--- a/team.html
+++ b/team.html
@@ -429,7 +429,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Abdul Rahman.png" alt="Ahmad">
+                                    <img src="assets/img/team/Abdul-rehman-sb.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Abdul Rahman</a></h6>
@@ -643,7 +643,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/service/awais.png" alt="">
+                                    <img src="assets/img/team/awaisraza.jpg" alt="">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
