--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>All Project | Multiple Themes Build | Digital Minds On</title>
+    <title>All Project | Multiple Themes Build | Digital Minds On </title>
     <meta name="description" content="All Projects & Built with Multiple Themes for versatile, customized solutions to meet diverse business needs and goals.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,7 +19,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+ <!-- title scrollbar -->
+ <script>
+    // Text for the title
+    let titleText = "All Project | Multiple Themes Build | Digital Minds On ";
+    let index = 0;
+    function scrollTitle() {
+        document.title = titleText.slice(index) + titleText.slice(0, index);
+        index = (index + 1) % titleText.length;
+    }
+    setInterval(scrollTitle, 200); 
+</script>
+<!-- title scrollbar -->
 
 
     <script>
