--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="about__img__wrapper position-relative" data-tilt>
-                            <img class="about__img__1" src="assets/img/about/about__1.png" alt="">
+                            <img class="about__img__1" src="assets/img/project/combine-pic.png" alt="img">
                             <div class="about__number">
                                 <div class="about__number__inner about__number__position">
                                     <span>29</span>
