--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
                                                     and Africa , ranging from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL
-                                                    SERVICES</a>
+                                                <a class="default__button" href="contact">GET FREE QUATE</a>
                                             </div>
                                         </div>
                                     </div>
@@ -387,8 +386,7 @@
                                                     from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL
-                                                    SERVICES</a>
+                                                <a class="default__button" href="contact">GET FREE QUATE</a>
                                             </div>
                                         </div>
                                     </div>
@@ -417,14 +415,13 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL
-                                                    SERVICES</a>
+                                                <a class="default__button" href="contact">GET FREE QUATE</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/nadeem.png" alt="">
+                                            <img src="assets/img/team/slider/nadeem.png" alt="img">
                                         </div>
                                     </div>
                                 </div>
